singularity/jobs/error3994540.err
  File "train.py", line 232
    elif config.gnnVersion==1 and config.cortexGNN::
                                                   ^
SyntaxError: invalid syntax
